# rust-lambda-extension-example

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
